[gd_scene load_steps=6 format=3 uid="uid://ux7l78ueiylt"]

[ext_resource type="Script" path="res://Scripts/Cars/parentCar.gd" id="1_n68py"]
[ext_resource type="Texture2D" uid="uid://culs8qglxkg03" path="res://Assets/Sprites/Cars/Mustang Top View.png" id="2_rh4pd"]
[ext_resource type="Script" path="res://Scripts/Cars/terrain_detector.gd" id="3_qrt3x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4y51"]
size = Vector2(44, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mox8c"]
size = Vector2(8.99993, 13.9999)

[node name="parentCar" type="CharacterBody2D"]
script = ExtResource("1_n68py")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_rh4pd")
region_enabled = true
region_rect = Rect2(64, 20, 43, 98)

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("RectangleShape2D_v4y51")
debug_color = Color(0.88312, 0.19237, 0.679116, 0.42)

[node name="camera2d" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="terrainDetector" type="Node2D" parent="."]
script = ExtResource("3_qrt3x")

[node name="terrainDetectorL" type="Area2D" parent="terrainDetector"]
collision_layer = 0
collision_mask = 2

[node name="collisionShape2d" type="CollisionShape2D" parent="terrainDetector/terrainDetectorL"]
position = Vector2(0, -17)
rotation = 1.5708
shape = SubResource("RectangleShape2D_mox8c")

[node name="terrainDetectorR" type="Area2D" parent="terrainDetector"]
collision_layer = 0
collision_mask = 2

[node name="collisionShape2d" type="CollisionShape2D" parent="terrainDetector/terrainDetectorR"]
position = Vector2(0, 17)
rotation = 1.5708
shape = SubResource("RectangleShape2D_mox8c")

[connection signal="area_entered" from="terrainDetector/terrainDetectorL" to="terrainDetector" method="_on_terrain_detector_l_area_entered"]
[connection signal="area_exited" from="terrainDetector/terrainDetectorL" to="terrainDetector" method="_on_terrain_detector_l_area_exited"]
[connection signal="area_entered" from="terrainDetector/terrainDetectorR" to="terrainDetector" method="_on_terrain_detector_r_area_entered"]
[connection signal="area_exited" from="terrainDetector/terrainDetectorR" to="terrainDetector" method="_on_terrain_detector_r_area_exited"]
